# agent-tools

./: .gitignore  LICENSE  README.md  agent-prompt.md  agent-prompt_v1.md  agent.py  main_tui.py  pyproject.toml  requirements.txt  style_guide.md  test.py  test_collaspbli.py
base/: bash_utils.py  file_utils.py  models.py  settings.py  store.py
bash/: __init__.py  prompt.md
bash/tools/: __init__.py  bash.py  glob.py  grep.py  test_bash.py  test_glob.py  test_grep.py
command_line/: __init__.py  models.py  prompt.md  settings.py
command_line/tools/: bash.py  execute_command.py  test_bash.py  test_execute_command.py
file_system/: agent.py  config.py  models.py  prompt.md  read_file.py  settings.py  test_read_file.py  tools.py  utils.py
file_system/tools/: edit_file.py  read_file.py  test_edit_file.py  test_read_file.py  test_write_file.py  write_file.py
interactive/tools/: ask_question.py
llm_client/: client.py
rich_testing/: col.py
skills/postman-collection-creator/: SKILLS.md
skills/postman-collection-creator/assets/: collection_template.json  environment_template.json
skills/postman-collection-creator/references/: AUTHENTICATION.md  CI_CD_INTEGRATION.md  (+1 more)
skills/tools/: skill.py
subagents/agents/: code-reviewer.md
subagents/tools/: subagent.py
test/: main.py
todo/: prompt.md  test_tools.py  tools.py
todo/tools/: __init__.py  create_todo.py  list_todos.py  test_create_todo.py  test_list_todos.py  test_update_todo.py  update_todo.py
tui/: app.py  globals.py  input.py  screens.py  widgets.py
tui/tools/: ask_question.py
(+3 files in other folders)
