[project]
name = "agent-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.3.1",
    "langchain-ollama>=1.0.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "textual>=6.10.0",
    "textual-dev>=1.8.0",
]



